Fine tune proposal

--- a/limitation/research-steps.tex
+++ b/limitation/research-steps.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
     \item ศึกษางานวิจัยที่เกี่ยวข้อง
     \item ศึกษาวิธีการสร้าง{\scg}ในภาษาจาวา
-    \item ศึกษาวิธีการกำหนดน้ำหนักที่ให้กับ{\scg}เพื่อใช้เลือก{\TestPath}
+    \item ศึกษาวิธีการสร้างข้อมูลทดสอบแบบสุ่มซึ่งสอดคล้องกับ{\PredicateNode}บน{\TestPath}
     \item กำหนดขอบเขตและแนวทางการวิจัย
     \item ดำเนินการวิจัย
     \begin{enumerate}
