--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -43,8 +43,8 @@
 ปัญหาหนึ่งของการสร้างข้อมูลทดสอบแบบสุ่มค่าคือค่าที่ได้นั้นไร้ทิศทางทำให้โอกาสที่จะเจอกับข้อผิดพลาดนั้นน้อยลง 
 ตลอดจนค่าที่สุ่มได้นั้นไม่สามารถทดสอบ{\sourcecode}ภายในบริเวณที่ต้องการ งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode}
 ซึ่งเป็น{\StaticInformation} และ{\DynamicInformation}ที่ได้หลังจากการทดสอบ{\software} 
-ของ{\SUT}เข้ามาร่วมพิจารณา โดยจัดเก็บค่าคงที่ที่มีชนิดข้อมูลพื้นฐาน ได้แก่ ตัวอักษร ({\code String}) ตัวเลข ({\code int, double, float}) 
-และข้อมูลเชิงตรรกะ ({\code bool}) จาก{\sourcecode} เข้าร่วมพิจารณาเพื่อหาข้อมูลทดสอบที่สอดคล้องตามเงื่อนไขที่พบบน{\TestPath}ที่เลือก 
+ของ{\SUT}เข้ามาร่วมพิจารณา โดยจัดเก็บค่าคงที่ที่มีชนิดข้อมูลพื้นฐาน ได้แก่ ตัวอักษร (\code{String}) ตัวเลข (\code{int, double, float}) 
+และข้อมูลเชิงตรรกะ (\code{bool}) จาก{\sourcecode} เข้าร่วมพิจารณาเพื่อหาข้อมูลทดสอบที่สอดคล้องตามเงื่อนไขที่พบบน{\TestPath}ที่เลือก 
 ซึ่งการใช้งาน{\StaticInformation}ร่วมกันกับ{\DynamicInformation} เข้าร่วมพิจารณาเพื่อสร้างข้อมูลทดสอบนั้น 
 ให้ผลการวิจัยว่าสามารถสร้างกรอบการสุ่มข้อมูลทดสอบเพื่อช่วยให้ ได้ข้อมูลนำเข้าที่สามารถค้นพบข้อผิดพลาดภายในชุดข้อมูลตัวอย่างได้มากขึ้น 
 เมื่อเทียบกับวิธีการสุ่มข้อมูลแบบเดิมโดยไม่กำหนดกรอบ
