--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -1,25 +1,26 @@
 \subsection{\ProgramGraph}
 \label{sec:sub:pg}
 
-{\software} ถูกพัฒนาขึ้นมาเพื่อแก้ไขปัญหาในบริบทที่หลากหลาย ส่งผลให้มีโครงสร้างของ{\sourcecode}นั้นแตกต่างกันไปตามบริบทการพัฒนา
-หรือปัญหาที่ต้องการแก้ไข ซึ่งไม่มีรูปแบบโครงสร้างที่คงตัว หากแต่ในขั้นตอนสร้างกรณีทดสอบนั้น\FirstTimeDefine{\tester}{\testerEN}
+{\software} ถูกพัฒนาขึ้นมาเพื่อแก้ไขปัญหาในบริบทที่หลากหลาย ส่งผลให้มีโครงสร้างของ{\sourcecode}นั้นแตกต่างกันไปตามเทคโนโลยีที่ใช้พัฒนา
+หรือปัญหาที่ต้องการแก้ไข ซึ่งรูปแบบโครงสร้างนั้นไม่ตายตัว หากแต่ในขั้นตอนสร้างกรณีทดสอบนั้น\FirstTimeDefine{\tester}{\testerEN}
 จำเป็นต้องทำความเข้าใจโครงสร้างของ{\software} ทั้งจากแผนภาพการออกแบบ เช่น แผนภาพยูเอ็มแอล (UML - Unified Modeling Language) 
 และจาก{\sourcecode}โดยตรง ซึ่งการทำความเข้าใจโครงสร้างผ่าน{\sourcecode}โดยตรงนั้นย่อมสะท้อนลักษณะของ{\software}ที่เป็นปัจจุบันมากที่สุด
-{\ProgramGraph} จึงเป็นวิธีการนำเสนอโครงสร้างที่ปรากฏอยู่ภายใน{\software} ณ ขณะที่สนใจ ช่วยให้{\tester}เข้าใจโครงสร้างของ{\software}
-และออกแบบกรณีทดสอบได้มีประสิทธิภาพมากยิ่งขึ้น ซึ่งในงานวิจัยนี้จะนำ{\ProgramGraph}มาใช้ 2 ประเภท ด้วยกัน ได้แก่
+{\ProgramGraph} จึงเป็นวิธีการนำเสนอโครงสร้างการทำงานที่ปรากฏอยู่ภายใน{\software} ณ ขณะที่สนใจ 
+ช่วยให้{\tester}เข้าใจโครงสร้างของ{\software} และออกแบบกรณีทดสอบได้มีประสิทธิภาพมากยิ่งขึ้น 
+ซึ่งในงานวิจัยนี้จะนำ{\ProgramGraph}มาใช้ 2 ประเภท ด้วยกัน ได้แก่ \cfg และ \scg
 
 \subsubsection{\FirstTimeDefine{\cfg}{\cfgen}}
 \label{sec:sub:sub:cfg}
 
-หากแทน{\software} \code{P} แทนด้วยกราฟ \code{G} จะได้ว่า \code{G = (V, A)} เมื่อ \code{V (Vertex)} 
-คือเซตของ{\Node}ในกราฟ ซึ่งแต่ละ{\Node}แทนแถวคำสั่งใน{\sourcecode} และ \code{A\ (Arcs)} 
+หากแทน{\software} \code{P} ที่แทนความสัมพันธ์ของโครงสร้างภายในด้วยกราฟ \code{G = (V, A)} เมื่อ \code{V (Vertex)} 
+คือเซตของ{\Node}ในกราฟ โดยแต่ละ{\Node}แทนแถวคำสั่งใน{\sourcecode} และ \code{A\ (Arcs)} 
 คือเซตของคู่ลำดับโหนดที่มีความสัมพันธ์กันภายในกราฟซึ่งเชื่อมต่อกันแบบมีทิศทาง หาก \code{(v_m, v_n) \in A} จะหมายถึง 
 "\Node\ \code{v_n} จะทำงานในลำดับถัดไปหลังจากที่ \code{v_m} ทำงานเสร็จสิ้น" \cite{Jorgensen2013} 
-โดยที่ \code{v_i, v_j \in V} มีโหนดซึ่งไม่มีดีกรีเข้า \code{(d^+(v_i) = 0)} เป็นโหนดเริ่มต้น (Source node) 
+หาก \code{v_i, v_j \in V} ซึ่ง \code{V} มีโหนดซึ่งไม่มีดีกรีเข้า \code{(d^+(v_i) = 0)} เป็นโหนดเริ่มต้น (Source node) 
 และโหนดซึ่งไม่มีดีกรีออก \code{(d^-(v_j) = 0)} เป็นโหนดปลาย (Sink node) 
 กล่าวได้ว่า{\cfg}นั้นถือว่าเป็นกราฟอวัฏจักรระบุทิศทาง (Directed acyclic graph: DAG) \cite{Bang-Jensen2009}\ 
-ซึ่งรูปแบบความสำพันธ์ของกราฟโปรแกรมนั้น McCabe \cite{Watson1996} 
-ได้เสนอรูปแบบโครงสร้างการทำงานขั้นพื้นฐานของการพัฒนาโปรแกรม (The primitive operations of structured programming) 
+ซึ่งรูปแบบความสำพันธ์ของ{\cfg}นั้น McCabe \cite{Watson1996} 
+ได้เสนอรูปแบบโครงสร้างการทำงานขั้นพื้นฐานของการโปรแกรม (The primitive operations of structured programming) 
 \figref{fig:graphtype}
 
 \begin{figure}[ht!]
@@ -29,9 +30,9 @@
     \label{fig:graphtype}
 \end{figure}
 
-จาก\figref{fig:pseudocodeGrading} เป็นรหัสเทียม (Psuedo code) ที่นำเสนอวิธีการคำนวณเกรดของนิสิตโดยรับข้อมูลคะแนน \code{(student\_score)} 
-และคะแนนพิเศษ \code{(bonus\_score)} ของนิสิต หากมีคะแนนเป็น 0 จะได้เกรด \code{I}\ หากนิสิตได้คะแนนต่ำกว่า 80 คะแนน 
-จะได้เกรด \code{U}\ หากมีคะแนนตั้งแต่ 80 ไปจนถึง 100 คะแนน นิสิตจะได้เกรด \code{S}\ ซึ่งจากชุดรหัสเทียมนี้ 
+จาก\figref{fig:pseudocodeGrading} เป็นรหัสเทียม (Psuedo code) แสดงวิธีการคำนวณเกรดของนิสิตโดยรับข้อมูลคะแนน \code{(student\_score)} 
+และคะแนนพิเศษ \code{(bonus\_score)} หากคะแนนเป็น 0 จะได้เกรด \code{I}\ หากนิสิตได้คะแนนต่ำกว่า 80 คะแนน 
+จะได้เกรด \code{U}\ หากคะแนนอยู่ระหว่าง 80 ไปจนถึง 100 คะแนน นิสิตจะได้เกรด \code{S}\ ซึ่งจากชุดรหัสเทียมนี้ 
 สามารถแปลงเป็นกราฟโปรแกรม เพื่อทำความเข้าใจโครงสร้างได้ดัง{\figref{fig:programGraph} 
 
 \begin{figure}[ht!]
@@ -81,7 +82,7 @@
 
 จากโครงสร้าง{\sourcecode} ดัง{\figref{fig:pseudocodeGrading}} ทำให้เห็นได้ว่า {\tester}สามารถทำความเข้าใจโครงสร้างของ{\sourcecode} ได้ 
 ถึงแม้{\tester}จะไม่มีประสบการณ์กับภาษาที่ใช้พัฒนา หากแต่{\tester}สามารวิเคราะห์หากรณีทดสอบได้จาก{\cfg}ข้างต้น 
-ด้วยการพิจารณา{\PredicateNode}ที่ปรากฏบน{\FirstTimeDefine{\TestPath}{\TestPathEN}} ยกตัวอย่างเช่น 
+ด้วยการพิจารณา{\PredicateNode}ที่ปรากฏบน{\TestPath} ยกตัวอย่างเช่น 
 หากเลือก{\Path}จาก{\figref{fig:programGraph}} เป็น{\TestPath}ดังที่แสดงใน{\figref{fig:testpath}} จะพบว่ามี{\PredicateNode}บน{\TestPath} 3 {\Node} 
 ด้วยกัน นั่นคือ \code{4}, \code{5} และ \code{10} เมื่อพิจารณา{\PredicateNode}ทั้ง 3 {\Node}จะได้ข้อมูลทดสอบเป็น \code{bonus\_score = 1} และ 
 \code{student\_score = 50} ซึ่งข้อมูลทดสอบที่สร้างขึ้นนี้สามารถทำให้โปรแกรมทำงานใน{\TestPath}ได้ 
