--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -159,3 +159,6 @@
 
 \newcommand{\testResultCompare}{เปรียบเทียบผลลัพธ์การดำเนินงาน}
 \newcommand{\testResultCompareEN}{Compare test excution result}
+
+\newcommand{\pathConditions}{เงื่อนไขของเส้นทาง}
+\newcommand{\enum}{อีนัม}
