--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -6,14 +6,14 @@
     \item สร้างกรณีทดสอบที่ครอบคลุม{\TestPath}ระหว่าง{\CUT} \label{enu:lim:tc}
     \item รองรับการเรียกใช้งานกันของ{\CUT}บน{\TestPath}สูงสุด 3 {\class} \label{enu:lim:3linkingclass}
     \item รองรับจำนวน{\method}ภายใน{\CUT}สูงสุด{\class}ละไม่เกิน 5 {\method} \label{enu:lim:5methods}
-    \item รองรับ{\class}ภาษาจาวาขนาดความยาวไม่เกิน 200 บรรทัดต่อ{\class} \label{enu:lim:200loc} 
+    % \item รองรับ{\class}ภาษาจาวาขนาดความยาวไม่เกิน 200 บรรทัดต่อ{\class} \label{enu:lim:200loc} 
         % http://softwareengineering.stackexchange.com/questions/66523/how-many-lines-per-class-is-too-many-in-java
-    \item รองรับ{\TestPath}ที่ปรากฎ{\PredicateNode}ตลอดทั้ง{\Path}ไม่เกิน 20 {\Node}  \label{enu:lim:20predicate}
+    % \item รองรับ{\TestPath}ที่ปรากฎ{\PredicateNode}ตลอดทั้ง{\Path}ไม่เกิน 20 {\Node}  \label{enu:lim:20predicate}
     \item ข้อมูล{\scg}ที่สร้างขึ้นนั้นจะสนใจเฉพาะความสัมพันธ์ระหว่างคลาสที่อยู่ภายใน{\Package}จาวา (Java package) ตามที่ผู้ใช้ระบุ 
         โดยละเว้นชุดพัฒนามาตรฐานของภาษาจาวาและชุดคำสั่งภายนอก \label{enu:lim:scg}
     \item รองรับข้อมูลนำเข้าประเภทตัวอักษร (มีชนิดข้อมูลเป็น \code{String} ในภาษาจาวา) ตัวเลข 
-        (มีชนิดข้อมูลเป็น \code{byte, short, int, long, float} และ \code{double} ในภาษาจาวา) และโครงสร้างข้อมูลจำกัดเขต (มีชนิดข้อมูลเป็น \code{enum} ในภาษาจาวา) 
-        ยังไม่รองรับประเภทข้อมูลเฉพาะที่สร้างขึ้นเอง \label{enu:lim:datatype}
+        (มีชนิดข้อมูลเป็น \code{byte, short, int, long, float} และ \code{double} ในภาษาจาวา) และ{\enum} 
+        (มีชนิดข้อมูลเป็น \code{enum} ในภาษาจาวา) ยังไม่รองรับประเภทข้อมูลเฉพาะที่สร้างขึ้นเอง \label{enu:lim:datatype}
     \item รองรับโปรแกรมประยุกต์ที่พัฒนาขึ้นเพื่อใช้งานบนเครื่องคอมพิวเตอร์ส่วนบุคคล และ{\sourcecode}พัฒนาขึ้นด้วยภาษาจาวา  \label{enu:lim:datatype}
         % โดยไม่รวมถึงโปรแกรมประยุกต์ประเภทเว็บแอปพลิเคชัน
     \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequential) ไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Parallel) \label{enu:lim:seq}
