--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -21,7 +21,7 @@
 
 งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ซึ่งทำงานร่วมกันระหว่าง
 ในช่วง\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบครอบคลุม
-\FirstTimeDefine{\scg}{\scgen} จากการวิเคราะห์\FirstTimeDefine{\StaticInformation}{\StaticInformationEN} 
+\FirstTimeDefine{\scg}{\scgEN} จากการวิเคราะห์\FirstTimeDefine{\StaticInformation}{\StaticInformationEN} 
 ของ{\sourcecode}ที่นำมาพิจารณา โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ 
 ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
 เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
