MIM: Introduction part fixed

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -3,26 +3,28 @@
 
 การทดสอบซอฟต์แวร์เป็นขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่ยังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
 อีกทั้งยังเป็นกระบวนการสร้างความเชื่อมั่นด้านคุณภาพของซอฟต์แวร์ที่ได้พัฒนาขึ้น ดังนั้นกว่ากึ่งหนึ่งของทรัพยากรที่ใช้ในการดำเนินงานโครงการพัฒนาซอฟต์แวร์
-จึงถูกจัดสรรค์ให้กับขั้นตอนการทดสอบซอฟต์แวร์นี้ \cite{Jackson2007, Tassey2002} จึงสะท้อนได้ว่าการทดสอบซอฟต์แวร์ถือเป็นขั้นตอนที่สำคัญ
+จึงถูกจัดสรรให้กับขั้นตอนการทดสอบซอฟต์แวร์นี้ \cite{Jackson2007, Tassey2002} จึงสะท้อนได้ว่าการทดสอบซอฟต์แวร์ถือเป็นขั้นตอนที่สำคัญ
 หนึ่งในกระบวนการพัฒนาซอฟต์แวร์ที่หลายหน่วยงานให้ความสำคัญ
 
 การสร้างกรณีทดสอบสำหรับ\FirstTimeDefine{\SUT}{\SUTEN} นั้นมีหลากหลายวิธีการขึ้นอยู่กับเป้าหมายของการดำเนินงาน 
-ทั้งการสร้างกรณีทดสอบเพื่อตรวจสอบว่า{\method}ภายใน\FirstTimeDefine{\CUT}{\CUTEN}ถูกเรียกใช้งานครบถ้วนแล้วหรือไม่ \cite{6847360}
+ทั้งการสร้างกรณีทดสอบเพื่อตรวจสอบว่า{\method}ภายใน\FirstTimeDefine{\CUT}{\CUTEN}\ ถูกเรียกใช้งานครบถ้วนแล้วหรือไม่ \cite{6847360}
 หรือสร้างกรณีทดสอบที่ครอบคลุมเงื่อนไขการตัดสินใจที่ปรากฏภายใน{\CUT} \cite{Luanghirun2016} ซึ่งเป็นการพิจารณาเพียงเฉพาะในคลาสเท่านั้น
 หากแต่เมื่อต้องการทดสอบการทำงานร่วมกันขององค์ประกอบอื่น ๆ ของ\FirstTimeDefine{\SUT}{\SUTEN} 
 ดังนั้นกรณีทดสอบที่สร้างขึ้นจำเป็นต้องครอบคลุมการเรียกใช้งานระหว่างกันขององค์ประกอบที่พัฒนาขึ้น
 ซึ่งมีแนวทางการสร้างกรณีทดสอบหลายแนวทาง อาทิ 
 การสร้างกรณีทดสอบโดยพิจารณาแผนภาพอธิบายโครงสร้างหรือพฤติกรรมของ{\softwareComponent} \cite{Panthi2012, Shirole2013}
-หากแต่การพิจารณาเพียงแต่เฉพาะแผนภาพการออกแบบอาจยังไม่สะท้อนโครงสร้างของ{\sourcecode}ที่พัฒนาขึ้นได้ 
+หากแต่การพิจารณาเพียงเฉพาะแผนภาพการออกแบบจึงมิอาจสะท้อนโครงสร้างของ{\sourcecode}ที่พัฒนาขึ้นได้ 
 เพราะในขั้นตอนการพัฒนานั้น อาจมีการปรับเปลี่ยนลักษณะการดำเนินงาน และความสัมพันธ์ระหว่างองค์ประกอบ 
 ตามความเหมาะสมของการดำเนินงานและเทคโนโลยีที่ใช้พัฒนา 
-เมื่อการทดสอบระดับ{\class}นั้นแนวทางการทดสอบส่วนย่อยที่สามารถตรวจสอบหาข้อผิดพลาดอยู่แล้ว 
-คงเหลือเพียงแค่ข้อผิดพลาดซึ่งเกิดขึ้นอยู่ระหว่างการเรียกใช้งานระหว่างองค์ประกอบภายใน
+สำหรับการทดสอบระดับ{\class}นั้นมีแนวทางการทดสอบเพื่อหาข้อผิดพลาด เช่น การทดสอบส่วนย่อย (Unit testing) ที่สามารถตรวจสอบหาข้อผิดพลาดได้
+หรือการสร้างกรณีทดสอบเพื่อหาความครอบคลุมของ{\sourcecode} \cite{6847360, Luanghirun2016} แล้ว
+คงเหลือการค้นหาข้อผิดพลาดซึ่งอยู่ระหว่างการเรียกใช้งานระหว่างองค์ประกอบภายใน{\sourcecode} 
+ที่จำเป็นต้องสร้างกรณีทดสอบเพื่อทดสอบ{\path}ระหว่างองค์ประกอบดังกล่าว
 
-งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ซึ่งทำงานร่วมกันระหว่าง
-ในช่วง\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบครอบคลุม
-\FirstTimeDefine{\scg}{\scgEN} จากการวิเคราะห์\FirstTimeDefine{\StaticInformation}{\StaticInformationEN} 
-ของ{\sourcecode}ที่นำมาพิจารณา โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ 
-ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
-เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
-ร่วมกัน เพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าสำหรับกรณีทดสอบที่สร้างขึ้นในรูปแบบของ JUnit
+งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}
+ซึ่งทำงานร่วมกันระหว่างในช่วง\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} 
+ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบครอบคลุม\FirstTimeDefine{\scg}{\scgEN} 
+จากการวิเคราะห์\FirstTimeDefine{\StaticInformation}{\StaticInformationEN} 
+ของ{\sourcecode}ที่นำมาพิจารณา โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ที่จัดเก็บจาก{\sourcecode} 
+ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล ร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
+เพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าสำหรับกรณีทดสอบที่สร้างขึ้นในรูปแบบของ JUnit
