--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -43,7 +43,7 @@
 \newcommand{\class}{คลาส}
 \newcommand{\classEN}{Class}
 
-\newcommand{\method}{เมธอด}
+\newcommand{\method}{เมท็อด}
 \newcommand{\methodEN}{Method}
 
 \newcommand{\attribute}{แอททริบิวต์}
