MIM: Remove a word

--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -6,7 +6,7 @@
 % - - - - - - - - - - - - - - - - - - - -
 \subsection{งานวิจัย {\it "A Static Approach to Prioritizing JUnit Test Cases"} \cite{6363461}}
 
-งานวิจัยชิ้นนี้ได้นำเสนอวิธีการจัดเรียงกรณีทดสอบด้วยแนวทาง \emph{"JUnit test case Prioritization Techniques operating in the Absence of coverage information (JUPTA)"} 
+งานวิจัยนี้ได้นำเสนอวิธีการจัดเรียงกรณีทดสอบด้วยแนวทาง \emph{"JUnit test case Prioritization Techniques operating in the Absence of coverage information (JUPTA)"} 
 โดยอาศัยการวิเคราะห์ข้อมูล{\scg}ที่สร้างขึ้นจากกรณีทดสอบ และโปรแกรมภายใต้การทดสอบเพื่อประมาณค่าความสามารถที่กรณีทดสอบนั้นสามารถครอบคลุม{\sourcecode}ได้
 ทั้งนี้เพื่อเป็นการพิสูจน์แนวคิดที่ผู้วิจัยพบว่าวิธีการจัดเรียงกรณีทดสอบโดยส่วนใหญ่ที่ทราบจากการทบทวนวรรณกรรมนั้น จะใช้ข้อมูลเชิงพลวัต (Dynamic information)
 ที่ได้จากการทดสอบ{\sourcecode}ในแต่ละครั้ง เข้ามาช่วยวิเคราะห์ลำดับของกรณีทดสอบในครั้งถัดไป พบว่าข้อมูลที่ได้นั้นอาจจะเป็นข้อมูลที่ล้าหลังไปจาก{\sourcecode} 
