--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -19,7 +19,7 @@
 สำหรับการทดสอบระดับ{\class}นั้นมีแนวทางการทดสอบเพื่อหาข้อผิดพลาด เช่น การทดสอบส่วนย่อย (Unit testing) ที่สามารถตรวจสอบหาข้อผิดพลาดได้
 หรือการสร้างกรณีทดสอบเพื่อหาความครอบคลุมของ{\sourcecode} \cite{6847360, Luanghirun2016} แล้ว
 คงเหลือการค้นหาข้อผิดพลาดซึ่งอยู่ระหว่างการเรียกใช้งานระหว่างองค์ประกอบภายใน{\sourcecode} 
-ที่จำเป็นต้องสร้างกรณีทดสอบเพื่อทดสอบ{\path}ระหว่างองค์ประกอบดังกล่าว
+ที่จำเป็นต้องสร้างกรณีทดสอบเพื่อทดสอบ{\Path}ระหว่างองค์ประกอบดังกล่าว
 
 งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}
 ซึ่งทำงานร่วมกันระหว่างในช่วง\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} 
