--- a/commands.tex
+++ b/commands.tex
@@ -1,5 +1,7 @@
 \newcommand{\FirstTimeDefine}[2]{#1\,(#2)}
 
+\hyphenation{thatshouldnot}
+
 \newcommand*{\Scale}[2][4]{\scalebox{#1}{$#2$}}%
 \newcommand*{\Resize}[2]{\resizebox{#1}{!}{$#2$}}%
 
