Add mbox to prevent word split

--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -43,7 +43,7 @@
 \newcommand{\class}{คลาส}
 \newcommand{\classEN}{Class}
 
-\newcommand{\method}{เมท็อด}
+\newcommand{\method}{\mbox{เมท็อด}}
 \newcommand{\methodEN}{Method}
 
 \newcommand{\attribute}{แอททริบิวต์}
