MIM: Methodology fixes

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -22,7 +22,7 @@
 ในขั้นตอนนี้เริ่มต้นด้วยการนำเข้าข้อมูลแพคเกจและแหล่งข้อมูล{\sourcecode}ซึ่ง{\tester} เพื่อใช้เป็นข้อมูลในการวิเคราะห์ข้อมูล{\sourcecode}ต่อไป
 จากนั้นจึงทำสำเนา{\sourcecode}จาก{\Repository} ตามที่ผู้ใช้งานระบุเข้ามาเก็บไว้ภายในฐานข้อมูล  เพื่อใช้มารวบรวม{\StaticInformation} 
 โดยสนใจเพียงเฉพาะ{\class}ซึ่งบรรจุอยู่ภายใน\FirstTimeDefine{\Package}{\PackageEN} ตามที่ผู้ใช้งานระบุ 
-โดยกำหนดให้เป็น "\FirstTimeDefine{\CUT}{\CUTEN}" ทั้งนี้กระบวนการจะประกอบไปด้วย 3 ขั้นตอนด้วยกัน นั่นคือ
+โดยกำหนดให้เป็น {\bf \CUT} ทั้งนี้กระบวนการจะประกอบไปด้วย 3 ขั้นตอนด้วยกัน นั่นคือ
 {\constantExtracting}, {\graphCreation} 
 และ{\sourcecodeInstrumention} 
 โดยมีแนวทางการดำเนินงานของแต่ละขั้นตอน ดังนี้
@@ -44,7 +44,7 @@
     \item {\it {\enum} (Enumeration)} ซึ่งมีประเภทข้อมูลเป็น \code{enum} ในภาษาจาวา
 \end{enumerate}
 
-ทั้งนี้จะไม่สนใจข้อมูลเชิงตรรกะ (มีชนิดข้อมูลเป็น \code{bool} ในภาษาจาวา) เนื่องมาจากว่าตัวเลือกที่เป็นไปได้จำกัดอยู่แล้ว 
+ทั้งนี้จะไม่สนใจข้อมูลเชิงตรรกะ (มีชนิดข้อมูลเป็น \code{bool} ในภาษาจาวา) เนื่องจากว่าตัวเลือกที่เป็นไปได้นั้นมีเพียง 2 ตัวเลือกเท่านั้น
 นอกจากนั้นจะยังไม่สนใจข้อมูลจำเพาะ ที่กำหนดขึ้นมาใช้งานเอง 
 จาก{\sourcecode}ของ{\class} \code{SimpleBonusScore} และ\code{SimpleGrading} ดังที่แสดงใน 
 \figref{fig:javaBonusScore} และ \ref{fig:javaGrading} ตามลำดับ ในการดำเนินการวิจัยครั้งนี้ 
@@ -62,10 +62,10 @@
 
 กระบวนการสร้างกราฟนั้นจะรับข้อมูล{\sourcecode}จาก{\Repository}ร่วมกับข้อมูลแพคเกจที่{\tester}สนใจมาประกอบกัน 
 เพื่อใช้สร้างกราฟ โดยแบ่งออกเป็น 2 กระบวนการย่อยด้วยกัน 
-นั้นคือ การสร้าง{\scg} และการสร้าง{\cfg} ดังนี้
+คือ การสร้าง{\scg} และการสร้าง{\cfg} โดยมีรายละเอียดดังต่อไปนี้
 
 \begin{enumerate}
-    \item {\bf สร้าง{\scg}} อ่านข้อมูล{\CUT}ตามที่ผู้ใช้งานสนใจ แล้วนำมาสร้าง{\scg} โดยผลลัพธ์ที่ได้นั้นจะแบ่งเป็น 3 กลุ่ม ได้แก่
+    \item {\bf สร้าง{\scg}} อ่านข้อมูล{\CUT}ตามที่ผู้ใช้งานสนใจ แล้วจึงสร้าง{\scg} โดยผลลัพธ์ที่ได้นั้นจะแบ่งเป็น 3 กลุ่ม ได้แก่
         \begin{enumerate}
             \item การเรียกใช้งานระหว่าง{\CUT}ด้วยกัน \label{ord:scgcut} 
             \item การเรียกใช้งานระหว่าง{\CUT}และ{\class}ภายในชุดพัฒนาของจาวา (Java SDK) \label{ord:scgjdk} 
@@ -194,11 +194,13 @@
 เพื่อให้กรณีทดสอบสามารถทดสอบ{\TestPath}ตามที่เลือกได้ ตามวิธีการที่กำหนด \cite{XING201491, Ma2016, Heaton2000} 
 หากมีพารามิเตอร์ที่ไม่ปรากฎใน{\TestPath}เป็นข้อมูลนำเข้า จะใช้วิธีการสุ่ม{\testData}โดยอาศัยข้อค่าคงที่ประกอบการพิจารณา
 
-เมื่อพิจารณาข้อมูล\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN} ของ{\method} \code{score} ของ{\class} \code{SimpleGrading} 
-พบว่า{\method}นี้ต้องการพารามิเตอร์ทั้งหมด 3 ค่า ด้วยกัน คือ \code{student\_id:String}, \code{student\_score:int} และ\code{bonus\_score:int} 
+เมื่อพิจารณาข้อมูล\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN} ของ{\method} \code{score} 
+ของ{\class} \code{SimpleGrading} พบว่า{\method}นี้ต้องการพารามิเตอร์ทั้งหมด 3 ค่า ด้วยกัน คือ \code{student\_id:String}, 
+\code{student\_score:int} และ\,\code{bonus\_score:int} 
 แต่จากตัวแปรที่พบใน{\PredicateNode}นั้นจะมีเพียง \code{student\_score} และ\code{bonus\_score} 
 จึงใช้เงื่อนไขที่พบนั้นเป็นแนวทางการสร้าง{\testData}{\TestPath} คงเหลือตัวแปร \code{student\_id} จึงใช้การสุ่มข้อมูลเพื่อสร้าง{\testData}
-โดยพิจารณาจากค่าคงที่ที่มีประเภทข้อมูลแบบเดียวกัน ซึ่งจัดเก็บ{\sourcecode}จากกระบวนการก่อนหน้า
+โดยพิจารณาจากค่าคงที่ที่มีประเภทข้อมูลแบบเดียวกัน ซึ่งจัดเก็บ{\sourcecode}จากกระบวนการก่อนหน้า 
+ซึ่งกำหนดให้ข้อมูลทดสอบที่สร้างขึ้นได้ในกระบวนการนี้มีรายการดัง\tabref{tab:GRTRandom}
 
 \begin{table}[ht!]
     \centering
@@ -220,7 +222,7 @@
 \label{sec:sub:sub:tcGen}
 
 ในขั้นตอนนี้จะนำข้อมูลนำเข้าที่สร้างจากกระบวนการก่อนหน้ามาสร้างกรณีทดสอบสำหรับภาษาจาวา โดยใส่{\expectedOutput} (บรรทัดที่ 7) 
-จะเกิดจากการสุ่มโดยอิงตามประเภทข้อมูลที่{\method}นั้นคืนค่า ดังตัวอย่างของกรณีทดสอบภายใน {\it \testSuite} ดัง \figref{fig:junitGradingTest} ด้านล่าง
+จะเกิดจากการสุ่มโดยอิงตามประเภทข้อมูลที่{\method}นั้นคืนค่า ดังตัวอย่างของกรณีทดสอบภายใน {\it \testSuite} ดัง\figref{fig:junitGradingTest}
 
 \begin{figure}[ht!]
     \lstset{basicstyle=\small,style=thesiscodestyle}
@@ -235,10 +237,12 @@
 
 ในขั้นตอนนี้\tester จะทำหน้าที่ปรับค่า\FirstTimeDefine{\expectedOutput}{\expectedOutputEN}
 แนวทางการดำเนินงานในขั้นตอนนี้จะเป็นการปรับค่าข้อมูลที่อยู่ภายในกรณีทดสอบที่ได้รับโดยนักทดสอบซอฟต์แวร์ 
-เพื่อให้กรณีทดสอบนั้นสอดคล้องกับการทำงานที่ควรจะเป็นของโปรแกรมมากที่สุด ยกตัวอย่างเช่นกรณีทดสอบที่ได้จากขั้นตอนที่ 5.4 
-ดัง \figref{fig:junitGradingTest} เมื่อได้ปรับการปรับค่าความคาดหวังจากนักทดสอบซอฟต์แวร์แล้วจะได้เป็นดัง{\figref{fig:junitGradingTestRefined}
+เพื่อให้กรณีทดสอบนั้นสอดคล้องกับการทำงานที่ควรจะเป็นของโปรแกรมมากที่สุด ยกตัวอย่างเช่นกรณีทดสอบที่ได้จากขั้นตอนที่ \ref{sec:sub:tcg} 
+ดัง\figref{fig:junitGradingTest} 
+เมื่อได้ปรับค่าคาดหวังจากนักทดสอบซอฟต์แวร์แล้วจะได้เป็นดัง{\figref{fig:junitGradingTestRefined}
 ซึ่งในที่นี้นักทดสอบซอฟต์แวร์ได้ปรับค่าในบรรทัดที่ 5 โดยเปลี่ยนจาก \code{"IUUUSISS"} ให้เป็นค่า \code{"5873000021"} 
-และบรรทัดที่ 7 คือค่า \code{"lorem"} เป็นค่า \code{"U"} จะได้ตัวอย่างของ {\it กรณีทดสอบพร้อมใช้งาน} ดังนี้
+และบรรทัดที่ 7 คือค่า \code{"lorem"} เป็นค่า \code{"U"} จะได้ตัวอย่างของ {\it กรณีทดสอบพร้อมใช้งาน} 
+ดัง\figref{fig:junitGradingTestRefined}
 
 \begin{figure}[ht!]
     \lstset{style=thesiscodestyle}
@@ -250,7 +254,8 @@
 \subsection{\executeSoftwareTesting}
 \label{sec:sub:executeSoftwareTesting}
 
-แนวทางการดำเนินงานในขั้นตอนนี้จะรับ {\it ชุดกรณีทดสอบ} เข้าทดสอบร่วมกับ{\sourcecode}ที่ผ่าน{\it \sourcecodeInstrumention} จาก{\it ฐานข้อมูล} 
+แนวทางการดำเนินงานในขั้นตอนนี้จะรับ {\it ชุดกรณีทดสอบ} 
+ทดสอบร่วมกับ{\sourcecode}ที่{\it \sourcecodeInstrumention}จาก{\it ฐานข้อมูล} 
 และรวบรวมข้อมูลที่เกิดจากชุดคำสั่งที่แทรกไว้ ซึ่งปรากฎขึ้นระหว่างการทดสอบเข้าไว้ด้วยกันเป็น {\it ผลลัพธ์การทดสอบซอฟต์แวร์} 
 เพื่อใช้ตรวจสอบให้แน่ใจว่ากรณีทดสอบนั้นสามารถทดสอบ{\TestPath}ที่เลือกได้ 
 
