--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -13,6 +13,7 @@
 \XeTeXlinebreakskip = 0pt plus 1pt
 \defaultfontfeatures{Scale=1.23}
 \renewcommand{\baselinestretch}{1.2}
+\renewcommand{\refname}{\section{เอกสารอ้างอิง}}
 
 \include{coverpage-config}
 \include{thesis-lexicon}
